--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="hud">Wins: <span id='wins'>XX</span> | Losses: <span id='losses'>XX</span></div>
+  <div id="hud">
+    Wins: <span id='wins'>XX</span> | Losses: <span id='losses'>XX</span>
+  </div>
+
   <div class="main-menu">
     <h1>WORD GUESS</h1>  
     <button id="start-game">Start Game!</button>
@@ -23,10 +26,13 @@
       <!-- <input type="text" readonly> -->
       <!-- write JS logic to append blank slots here according to length of word. -->
     </div>
-    
     <h2 class = "guesses-left-display">Guesses left: <span class="guesses-left"></span></h2>
   </div>
-  
+
+  <!-- <div class="end-screen">
+    <h1>YOU WON!</h1>
+  </div>
+   -->
   <script src="app.js"></script>
 </body>
 </html>
