Added end game handling and tracking of guesses.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
       <!-- write JS logic to append blank slots here according to length of word. -->
     </div>
     <h2 class = "guesses-left-display">Guesses left: <span class="guesses-left"></span></h2>
+    <h2 class = "letters-guessed-display">Incorrect letters Guessed: <span class="letters-guessed"></span></h2>
   </div>
 
-  <!-- <div class="end-screen">
+  <div class="end-screen">
     <h1>YOU WON!</h1>
   </div>
-   -->
+  
   <script src="app.js"></script>
 </body>
 </html>
