added final styling to game-end screen, and added functionality to the return to main menu button

--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
     <h2 class = "letters-guessed-display">Incorrect letters Guessed: <span class="letters-guessed"></span></h2>
   </div>
 
-  <div class="end-screen">
-    <h1>YOU WON!</h1>
+<div class="end-screen">
+  <div class="end-screen-title">
   </div>
+  <div class="stats">
+    <!-- stats populate here -->
+  </div>
+  <div class="return-main-menu">
+    Click here to record playthrough result and return to main menu.
+  </div>
+</div>
   
   <script src="app.js"></script>
 </body>
