fixed bug where time and guesses left stats were not removed at the start of a new game during the same browser session, and thus began to stack up with each subsequent playthrough

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div id="hud">
-    Wins: <span id='wins'>XX</span> | Losses: <span id='losses'>XX</span>
+    Wins: <span id='wins'></span> | Losses: <span id='losses'></span>
   </div>
 
   <div class="main-menu">
@@ -37,7 +37,7 @@
     <!-- stats populate here -->
   </div>
   <div class="return-main-menu">
-    Click here to record playthrough result and return to main menu.
+    Click here to return to main menu.
   </div>
 </div>
   
