--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- <input type="text" readonly> -->
       <!-- write JS logic to append blank slots here according to length of word. -->
     </div>
-    <h2 class = "guesses-left-display">Guesses left: <span class="guesses-left"></span></h2>
+    <h2 class = "guesses-left-display">Guesses Remaining: <span class="guesses-left"></span></h2>
     <h2 class = "letters-guessed-display">Incorrect letters Guessed: <span class="letters-guessed"></span></h2>
   </div>
 
