--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <div class="main-menu">
     <h1>WORD GUESS</h1>  
     <button id="start-game">Start Game!</button>
+    <button id="reset-win-loss">Reset win/ loss record</button>
   </div>
 
   <div class="game-screen">
